syntax = "proto3";

option java_multiple_files = true;
option java_package = "{{ root_package }}.v1.types";
option java_outer_classname = "PlatformTypeStubs";

package {{ root_package }}.v1.types;

import "google/protobuf/wrappers.proto";

message BigDecimalValue {
    uint32 scale = 1;
    uint32 precision = 2;
    bytes value = 3;
}

message PercentageValue {
    BigDecimalValue value = 1;
}

message UuidValue {
    string value = 1;
}

message NullableString {
    bool set_flag = 1;
    string value = 2;
}

message NullableInt {
    bool set_flag = 1;
    int32 value = 2;
}

message NullableBool {
    bool set_flag = 1;
    bool value = 2;
}

enum CountryDto {
    COUNTRY_UNSPECIFIED = 0;
    USA = 1;
    CA = 2;
}

enum CurrencyDto {
    CURRENCY_UNSPECIFIED = 0;
    USD = 1;
    CAD = 2;
}

message {{ VentureName }}StatusCodeValue{
    repeated string tags = 1;
}

message AddressDto {
    oneof address {
        UnitedStatesAddress united_states_address = 1;
    }
}

message UnitedStatesAddress {
    UuidValue id = 1;
    string country = 2;
    string city = 3;
    string state = 4;
    string zip = 5;
    string address_line1 = 6;
    google.protobuf.StringValue address_line2 = 7;
    google.protobuf.StringValue plus4_code = 8;
    google.protobuf.StringValue county_name = 9;
}

enum AddressType {
    ADDRESS_TYPE_UNSPECIFIED = 0;
    HOME = 1;
    WORK = 2;
    OTHER = 3;
}

message LookupDto {
    int32 ordinal = 1;
    string name = 2;
    string display_name = 3;
}

message LookupResponse {
    repeated LookupDto values = 1;
}
